# 4_sem

./: README.md
Acronis_task/: algorithm.cc
Frac_problem/: Frac.py
ISP_task/race_cond/other_race/: Makefile  pthread_race.cc
ISP_task/race_cond/race_creating/: Makefile  frac.hh  frac_bldr.cc  main.cc
Theormech_problem/: graph.py  gui.py  line_by_line.py  main.py  subplots.py
acronis_task/travelling_salesman/: CMakeLists.txt  Makefile  README.md  main.cc
acronis_task/travelling_salesman/algo/: algorithm.cc  algorithm.hh
acronis_task/travelling_salesman/circuits/: circuits.cc  circuits.hh
acronis_task/travelling_salesman/driver/: driver.cc  driver.hh
acronis_task/travelling_salesman/grammar/: compiler.y  lexer.l
acronis_task/travelling_salesman/graph/: graph.cc  graph.hh
acronis_task/travelling_salesman/matrix/: matrix.cc  matrix.hh  mem.hh
acronis_task/travelling_salesman/parser/: parser.cc  parser.hh
